First commited as before_60956_rev4

--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -1143,9 +1143,16 @@
                class="org.eclipse.egit.ui.internal.actions.SimpleFetchActionHandler">
          </class>
          <activeWhen>
-            <test
-                  property="GitSelection.resourcesSingleRepository">
-            </test>
+            <and>
+               <count
+                     value="1">
+               </count>
+               <iterate>
+                  <adapt
+                        type="org.eclipse.core.resources.IResource">
+                  </adapt>
+               </iterate>
+            </and>
          </activeWhen>
       </handler>
       <handler
@@ -1182,9 +1189,16 @@
                class="org.eclipse.egit.ui.internal.actions.SimplePushActionHandler">
          </class>
          <activeWhen>
-            <test
-                  property="GitSelection.resourcesSingleRepository">
-            </test>
+            <and>
+               <count
+                     value="1">
+               </count>
+               <iterate>
+                  <adapt
+                        type="org.eclipse.core.resources.IResource">
+                  </adapt>
+               </iterate>
+            </and>
          </activeWhen>
       </handler>
       <handler
@@ -1193,16 +1207,16 @@
                class="org.eclipse.egit.ui.internal.actions.PullFromUpstreamActionHandler">
          </class>
          <activeWhen>
-            <or>
-               <test
-                     property="GitSelection.resourcesSingleRepository">
-               </test>
-               <iterate>
+            <iterate>
+               <or>
+                  <adapt
+                        type="org.eclipse.core.resources.IProject">
+                  </adapt>
                   <instanceof
                         value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
                   </instanceof>
-               </iterate>
-            </or>
+               </or>
+            </iterate>
          </activeWhen>
       </handler>
       <handler
@@ -1232,7 +1246,7 @@
          </class>
          <activeWhen>
             <test
-                  property="GitSelection.projectsSingleRepository">
+                  property="GitSelection.projectSingleRepository">
             </test>
          </activeWhen>
       </handler>
@@ -1278,7 +1292,7 @@
          </class>
          <activeWhen>
             <test
-                  property="GitSelection.projectsSingleRepository">
+                  property="GitSelection.projectSingleRepository">
             </test>
          </activeWhen>
       </handler>
@@ -1313,7 +1327,7 @@
          <activeWhen>
             <or>
                <test
-                     property="GitSelection.projectsSingleRepository">
+                     property="GitSelection.projectSingleRepository">
                </test>
                <and>
                   <count
@@ -1549,9 +1563,16 @@
                class="org.eclipse.egit.ui.internal.actions.MergeActionHandler">
          </class>
          <activeWhen>
-            <test
-                  property="GitSelection.projectsSingleRepository">
-            </test>
+            <and>
+               <count
+                     value="1">
+               </count>
+               <iterate>
+                  <adapt
+                        type="org.eclipse.core.resources.IProject">
+                  </adapt>
+               </iterate>
+            </and>
          </activeWhen>
       </handler>
       <handler
@@ -1581,7 +1602,7 @@
          </class>
          <activeWhen>
             <test
-                  property="GitSelection.projectsSingleRepository">
+                  property="GitSelection.projectSingleRepository">
             </test>
          </activeWhen>
       </handler>
@@ -1661,9 +1682,16 @@
                class="org.eclipse.egit.ui.internal.actions.ResetActionHandler">
          </class>
          <activeWhen>
-            <test
-                  property="GitSelection.projectsSingleRepository">
-            </test>
+            <and>
+               <count
+                     value="1">
+               </count>
+               <iterate>
+                  <adapt
+                        type="org.eclipse.core.resources.IProject">
+                  </adapt>
+               </iterate>
+            </and>
          </activeWhen>
       </handler>
       <handler
@@ -3835,7 +3863,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectsSingleRepository">
+                        property="GitSelection.projectSingleRepository">
                   </test>
                </visibleWhen>
             </menu>
@@ -3846,7 +3874,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectsSingleRepository">
+                        property="GitSelection.projectSingleRepository">
                   </test>
                </visibleWhen>
             </command>
@@ -3858,7 +3886,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectsSingleRepository">
+                        property="GitSelection.projectSingleRepository">
                   </test>
                </visibleWhen>
             </command>
@@ -3868,7 +3896,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectsSingleRepository">
+                        property="GitSelection.projectSingleRepository">
                   </test>
                </visibleWhen>
             </dynamic>
@@ -3911,7 +3939,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectsSingleRepository"
+                           property="GitSelection.projectSingleRepository"
                            args="hasGerritConfiguration">
                      </test>
                   </visibleWhen>
@@ -3923,7 +3951,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectsSingleRepository"
+                           property="GitSelection.projectSingleRepository"
                            args="hasGerritConfiguration">
                      </test>
                   </visibleWhen>
@@ -3945,7 +3973,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectsSingleRepository">
+                        property="GitSelection.projectSingleRepository">
                   </test>
                </visibleWhen>
             </menu>
@@ -3962,7 +3990,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectsSingleRepository">
+                        property="GitSelection.projectSingleRepository">
                   </test>
                </visibleWhen>
             </menu>
@@ -4044,7 +4072,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectsSingleRepository">
+                           property="GitSelection.projectSingleRepository">
                      </test>
                   </visibleWhen>
                </command>
@@ -4055,7 +4083,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectsSingleRepository">
+                           property="GitSelection.projectSingleRepository">
                      </test>
                   </visibleWhen>
                </command>
@@ -4096,7 +4124,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectsSingleRepository">
+                           property="GitSelection.projectSingleRepository">
                      </test>
                   </visibleWhen>
                </command>
@@ -4111,7 +4139,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectsSingleRepository">
+                           property="GitSelection.projectSingleRepository">
                      </test>
                   </visibleWhen>
                </command>
@@ -4173,7 +4201,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectsSingleRepository">
+                        property="GitSelection.projectSingleRepository">
                   </test>
                </visibleWhen>
             </command>
@@ -4186,7 +4214,7 @@
                   label="%RebaseWithDialog_label">
                <visibleWhen checkEnabled="false">
                   <test
-                        property="GitSelection.projectsSingleRepository"
+                        property="GitSelection.projectSingleRepository"
                         args="isSafe">
                   </test>
                </visibleWhen>
@@ -4200,7 +4228,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectsSingleRepository"
+                           property="GitSelection.projectSingleRepository"
                            args="canAbortRebase">
                      </test>
                   </visibleWhen>
@@ -4211,7 +4239,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectsSingleRepository"
+                           property="GitSelection.projectSingleRepository"
                            args="canAbortRebase">
                      </test>
                   </visibleWhen>
@@ -4222,7 +4250,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectsSingleRepository"
+                           property="GitSelection.projectSingleRepository"
                            args="canContinueRebase">
                      </test>
                   </visibleWhen>
@@ -4235,7 +4263,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectsSingleRepository">
+                        property="GitSelection.projectSingleRepository">
                   </test>
                </visibleWhen>
             </command>
@@ -5225,7 +5253,7 @@
             class="org.eclipse.egit.ui.internal.selection.SelectionPropertyTester"
             id="org.eclipse.egit.ui.SelectionTester"
             namespace="GitSelection"
-            properties="projectsSingleRepository,projectsWithRepositories,resourcesSingleRepository,fileOrFolderInRepository,resourcesAllInRepository"
+            properties="projectSingleRepository,projectsWithRepositories,resourcesSingleRepository,fileOrFolderInRepository,resourcesAllInRepository"
             type="java.util.Collection">
       </propertyTester>
    </extension>
