--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -84,6 +84,27 @@
                menubarPath="compareWithMenu/gitCompareWithGroup2">
          </action>
          <action
+               class="org.eclipse.egit.ui.internal.actions.IgnoreAction"
+               definitionId="org.eclipse.egit.ui.team.Ignore"
+               icon="$nl$/icons/obj16/ignore.gif"
+               id="org.eclipse.egit.ui.internal.actions.IgnoreAction"
+               label="%IgnoreAction_label"
+               menubarPath="team.main/group8"/>
+         <action
+               class="org.eclipse.egit.ui.internal.actions.RemoveFromIndexAction"
+               definitionId="org.eclipse.egit.ui.team.RemoveFromIndex"
+               icon="$nl$/icons/obj16/unstage.gif"
+               id="org.eclipse.egit.ui.internal.actions.RemoveFromIndexAction"
+               label="%RemoveFromIndexAction_label"
+               menubarPath="team.main/group8"/>
+         <action
+               class="org.eclipse.egit.ui.internal.actions.AddToIndexAction"
+               definitionId="org.eclipse.egit.ui.team.AddToIndex"
+               icon="$nl$/icons/obj16/add.gif"
+               id="org.eclipse.egit.ui.internal.actions.AddToIndexAction"
+               label="%AddToIndexAction_label"
+               menubarPath="team.main/group8"/>
+         <action
                class="org.eclipse.egit.ui.internal.actions.ReplaceWithPreviousAction"
                enablesFor="1"
                id="org.eclipse.egit.ui.internal.actions.ReplaceWithPreviousAction"
@@ -4372,72 +4393,6 @@
       </menuContribution>
       <menuContribution
             allPopups="false"
-            locationURI="popup:team.main?after=group8">
-         <command
-               commandId="org.eclipse.egit.ui.team.AddToIndex"
-               label="%AddToIndexAction_label"
-               style="push">
-            <visibleWhen
-                  checkEnabled="false">
-               <and>
-                  <test
-                        property="GitSelection.resourcesSingleRepository">
-                  </test>
-                  <iterate
-                        ifEmpty="false"
-                        operator="or">
-                     <test
-                           property="GitResource.hasUnstagedChanges">
-                     </test>
-                   </iterate>
-               </and>
-            </visibleWhen>
-         </command>
-         <command
-               commandId="org.eclipse.egit.ui.team.RemoveFromIndex"
-               label="%RemoveFromIndexAction_label"
-               style="push">
-            <visibleWhen
-                  checkEnabled="false">
-               <and>
-                  <test
-                        property="GitSelection.resourcesSingleRepository">
-                  </test>
-                  <iterate
-                        ifEmpty="false"
-                        operator="or">
-                     <test
-                           property="GitResource.isStaged">
-                     </test>
-                  </iterate>
-               </and>
-            </visibleWhen>
-         </command>
-         <command
-               commandId="org.eclipse.egit.ui.team.Ignore"
-               label="%IgnoreAction_label"
-               style="push">
-            <visibleWhen
-                  checkEnabled="false">
-               <and>
-                  <test
-                        property="GitSelection.resourcesSingleRepository">
-                  </test>
-                  <iterate
-                        ifEmpty="false"
-                        operator="or">
-                     <not>
-                        <test
-                              property="GitResource.isIgnored">
-                        </test>
-                     </not>
-                  </iterate>
-               </and>
-            </visibleWhen>
-         </command>
-      </menuContribution>
-      <menuContribution
-            allPopups="false"
             locationURI="popup:compareWithMenu?after=gitCompareWithGroup">
          <command
                commandId="org.eclipse.egit.ui.team.CompareIndexWithHead"
@@ -5118,10 +5073,6 @@
             icon="icons/obj16/add.gif">
       </image>
       <image
-            commandId="org.eclipse.egit.ui.team.RemoveFromIndex"
-            icon="icons/obj16/unstage.gif">
-      </image>
-      <image
             commandId="org.eclipse.egit.ui.team.Branch"
             icon="icons/obj16/branch_obj.gif">
       </image>
@@ -5267,7 +5218,7 @@
             class="org.eclipse.egit.ui.internal.ResourcePropertyTester"
             id="org.eclipse.egit.ui.ResourceTester"
             namespace="GitResource"
-            properties="isShared,isContainer,isSafe,canCommit,canAmend,canResetHead,canAbortRebase,canContinueRebase,hasGerritConfiguration,isStaged,isIgnored,hasUnstagedChanges"
+            properties="isShared,isContainer,isSafe,canCommit,canAmend,canResetHead,canAbortRebase,canContinueRebase,hasGerritConfiguration"
             type="org.eclipse.core.resources.IResource">
       </propertyTester>
       <propertyTester
@@ -5275,6 +5226,13 @@
             id="org.eclipse.egit.ui.SelectionTester"
             namespace="GitSelection"
             properties="projectsSingleRepository,projectsWithRepositories,resourcesSingleRepository,fileOrFolderInRepository,resourcesAllInRepository"
+            type="java.util.Collection">
+      </propertyTester>
+      <propertyTester
+            class="org.eclipse.egit.ui.internal.resources.ResourceStatePropertyTester"
+            id="org.eclipse.egit.ui.ResourceStateTester"
+            namespace="org.eclipse.egit.ui.resources.ResourceState"
+            properties="hasStagedChanges,hasUnstagedChanges,hasNotIgnoredResources"
             type="java.util.Collection">
       </propertyTester>
    </extension>
