--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -1372,6 +1372,77 @@
          </activeWhen>
       </handler>
       <handler
+            class="org.eclipse.egit.ui.internal.actions.AddToIndexActionHandler"
+            commandId="org.eclipse.egit.ui.team.AddToIndex">
+         <activeWhen>
+            <and>
+               <test
+                     property="GitSelection.resourcesSingleRepository">
+               </test>
+               <iterate
+                     ifEmpty="false"
+                     operator="or">
+                  <and>
+                     <instanceof
+                           value="org.eclipse.core.resources.IResource">
+                     </instanceof>
+                     <test
+                           property="GitResource.hasUnstagedChanges">
+                     </test>
+                  </and>
+               </iterate>
+            </and>
+         </activeWhen>
+      </handler>
+      <handler
+            class="org.eclipse.egit.ui.internal.actions.RemoveFromIndexActionHandler"
+            commandId="org.eclipse.egit.ui.team.RemoveFromIndex">
+         <activeWhen>
+            <and>
+               <test
+                     property="GitSelection.resourcesSingleRepository">
+               </test>
+               <iterate
+                     ifEmpty="false"
+                     operator="or">
+                  <and>
+                     <instanceof
+                           value="org.eclipse.core.resources.IResource">
+                     </instanceof>
+                     <test
+                           property="GitResource.isStaged">
+                     </test>
+                  </and>
+               </iterate>
+            </and>
+         </activeWhen>
+      </handler>
+      <handler
+            class="org.eclipse.egit.ui.internal.actions.IgnoreActionHandler"
+            commandId="org.eclipse.egit.ui.team.Ignore">
+         <activeWhen>
+            <and>
+               <test
+                     property="GitSelection.resourcesSingleRepository">
+               </test>
+               <iterate
+                     ifEmpty="false"
+                     operator="or">
+                  <and>
+                     <instanceof
+                           value="org.eclipse.core.resources.IResource">
+                     </instanceof>
+                     <not>
+                        <test
+                              property="GitResource.isIgnored">
+                        </test>
+                     </not>
+                  </and>
+               </iterate>
+            </and>
+         </activeWhen>
+      </handler>
+      <handler
             commandId="org.eclipse.ui.edit.delete">
          <class
                class="org.eclipse.egit.ui.internal.repository.tree.command.DeleteFileCommand">
@@ -4379,9 +4450,23 @@
                style="push">
             <visibleWhen
                   checkEnabled="false">
-               <test
-                     property="org.eclipse.egit.ui.resources.ResourceState.hasUnstagedChanges">
-               </test>
+               <and>
+                  <test
+                        property="GitSelection.resourcesSingleRepository">
+                  </test>
+                  <iterate
+                        ifEmpty="false"
+                        operator="or">
+                     <and>
+                        <instanceof
+                              value="org.eclipse.core.resources.IResource">
+                        </instanceof>
+                        <test
+                              property="GitResource.hasUnstagedChanges">
+                        </test>
+                     </and>
+                  </iterate>
+               </and>
             </visibleWhen>
          </command>
          <command
@@ -4390,9 +4475,23 @@
                style="push">
             <visibleWhen
                   checkEnabled="false">
-               <test
-                     property="org.eclipse.egit.ui.resources.ResourceState.hasStagedChanges">
-               </test>
+               <and>
+                  <test
+                        property="GitSelection.resourcesSingleRepository">
+                  </test>
+                  <iterate
+                        ifEmpty="false"
+                        operator="or">
+                     <and>
+                        <instanceof
+                              value="org.eclipse.core.resources.IResource">
+                        </instanceof>
+                        <test
+                              property="GitResource.isStaged">
+                        </test>
+                     </and>
+                  </iterate>
+               </and>
             </visibleWhen>
          </command>
          <command
@@ -4401,9 +4500,25 @@
                style="push">
             <visibleWhen
                   checkEnabled="false">
-               <test
-                     property="org.eclipse.egit.ui.resources.ResourceState.hasNotIgnoredResources">
-               </test>
+               <and>
+                  <test
+                        property="GitSelection.resourcesSingleRepository">
+                  </test>
+                  <iterate
+                        ifEmpty="false"
+                        operator="or">
+                     <and>
+                        <instanceof
+                              value="org.eclipse.core.resources.IResource">
+                        </instanceof>
+                        <not>
+                           <test
+                                 property="GitResource.isIgnored">
+                           </test>
+                        </not>
+                     </and>
+                  </iterate>
+               </and>
             </visibleWhen>
          </command>
       </menuContribution>
@@ -5238,7 +5353,7 @@
             class="org.eclipse.egit.ui.internal.ResourcePropertyTester"
             id="org.eclipse.egit.ui.ResourceTester"
             namespace="GitResource"
-            properties="isShared,isContainer,isSafe,canCommit,canAmend,canResetHead,canAbortRebase,canContinueRebase,hasGerritConfiguration"
+            properties="isShared,isContainer,isSafe,canCommit,canAmend,canResetHead,canAbortRebase,canContinueRebase,hasGerritConfiguration,isStaged,isIgnored,hasUnstagedChanges"
             type="org.eclipse.core.resources.IResource">
       </propertyTester>
       <propertyTester
@@ -5246,13 +5361,6 @@
             id="org.eclipse.egit.ui.SelectionTester"
             namespace="GitSelection"
             properties="projectsSingleRepository,projectsWithRepositories,resourcesSingleRepository,fileOrFolderInRepository,resourcesAllInRepository"
-            type="java.util.Collection">
-      </propertyTester>
-      <propertyTester
-            class="org.eclipse.egit.ui.internal.resources.ResourceStatePropertyTester"
-            id="org.eclipse.egit.ui.ResourceStateTester"
-            namespace="org.eclipse.egit.ui.resources.ResourceState"
-            properties="hasStagedChanges,hasUnstagedChanges,hasNotIgnoredResources"
             type="java.util.Collection">
       </propertyTester>
    </extension>
