--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -1372,77 +1372,6 @@
          </activeWhen>
       </handler>
       <handler
-            class="org.eclipse.egit.ui.internal.actions.AddToIndexActionHandler"
-            commandId="org.eclipse.egit.ui.team.AddToIndex">
-         <activeWhen>
-            <and>
-               <test
-                     property="GitSelection.resourcesSingleRepository">
-               </test>
-               <iterate
-                     ifEmpty="false"
-                     operator="or">
-                  <and>
-                     <instanceof
-                           value="org.eclipse.core.resources.IResource">
-                     </instanceof>
-                     <test
-                           property="GitResource.hasUnstagedChanges">
-                     </test>
-                  </and>
-               </iterate>
-            </and>
-         </activeWhen>
-      </handler>
-      <handler
-            class="org.eclipse.egit.ui.internal.actions.RemoveFromIndexActionHandler"
-            commandId="org.eclipse.egit.ui.team.RemoveFromIndex">
-         <activeWhen>
-            <and>
-               <test
-                     property="GitSelection.resourcesSingleRepository">
-               </test>
-               <iterate
-                     ifEmpty="false"
-                     operator="or">
-                  <and>
-                     <instanceof
-                           value="org.eclipse.core.resources.IResource">
-                     </instanceof>
-                     <test
-                           property="GitResource.isStaged">
-                     </test>
-                  </and>
-               </iterate>
-            </and>
-         </activeWhen>
-      </handler>
-      <handler
-            class="org.eclipse.egit.ui.internal.actions.IgnoreActionHandler"
-            commandId="org.eclipse.egit.ui.team.Ignore">
-         <activeWhen>
-            <and>
-               <test
-                     property="GitSelection.resourcesSingleRepository">
-               </test>
-               <iterate
-                     ifEmpty="false"
-                     operator="or">
-                  <and>
-                     <instanceof
-                           value="org.eclipse.core.resources.IResource">
-                     </instanceof>
-                     <not>
-                        <test
-                              property="GitResource.isIgnored">
-                        </test>
-                     </not>
-                  </and>
-               </iterate>
-            </and>
-         </activeWhen>
-      </handler>
-      <handler
             commandId="org.eclipse.ui.edit.delete">
          <class
                class="org.eclipse.egit.ui.internal.repository.tree.command.DeleteFileCommand">
@@ -4458,9 +4387,9 @@
                         ifEmpty="false"
                         operator="or">
                      <and>
-                        <instanceof
-                              value="org.eclipse.core.resources.IResource">
-                        </instanceof>
+                        <adapt
+                              type="org.eclipse.core.resources.IResource">
+                        </adapt>
                         <test
                               property="GitResource.hasUnstagedChanges">
                         </test>
@@ -4483,9 +4412,9 @@
                         ifEmpty="false"
                         operator="or">
                      <and>
-                        <instanceof
-                              value="org.eclipse.core.resources.IResource">
-                        </instanceof>
+                        <adapt
+                              type="org.eclipse.core.resources.IResource">
+                        </adapt>
                         <test
                               property="GitResource.isStaged">
                         </test>
@@ -4508,9 +4437,9 @@
                         ifEmpty="false"
                         operator="or">
                      <and>
-                        <instanceof
-                              value="org.eclipse.core.resources.IResource">
-                        </instanceof>
+                        <adapt
+                              type="org.eclipse.core.resources.IResource">
+                        </adapt>
                         <not>
                            <test
                                  property="GitResource.isIgnored">
