First commited as before_62066_rev2

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -313,6 +313,7 @@ CompareTreeView_CompareModeTooltip=Compare mode
 CompareUtils_jobName=Git Compare...
 CompareUtils_errorGettingEncoding=Getting encoding failed
 CompareUtils_errorGettingHeadCommit=Getting HEAD commit failed
+CompareUtils_wrongResourceArgument=Given argument is neither a file nor a link: {1}
 CompareIndexWithHeadActionHandler_nothingToDoTitle=Nothing to compare
 CompareIndexWithHeadActionHandler_fileNotStaged=File {0} is not staged
 
@@ -1194,7 +1195,7 @@ DecoratorPreferencesPage_iconsShowTracked=Tracked resources
 DecoratorPreferencesPage_iconsShowUntracked=Untracked resources
 DecoratorPreferencesPage_iconsShowStaged=Staged resources
 DecoratorPreferencesPage_iconsShowConflicts=Conflicting resources
-DecoratorPreferencesPage_iconsShowAssumeValid=Assumed unchanged resources
+DecoratorPreferencesPage_iconsShowAssumeUnchanged=Assumed unchanged resources
 DecoratorPreferencesPage_changeSetLabelFormat=Commits:
 DecoratorPreferencesPage_otherDecorations=Other
 DecoratorPreferencesPage_bindingChangeSetAuthor=Commit author name;
