First commited as before_62071_rev1

--- a/org.eclipse.egit.gitflow.ui/plugin.xml
+++ b/org.eclipse.egit.gitflow.ui/plugin.xml
@@ -22,17 +22,20 @@
 					style="push">
 				<visibleWhen
 						checkEnabled="false">
-					<and>
-						<reference definitionId="org.eclipse.egit.gitflow.ui.commandEnabled" />
-						<with variable="org.eclipse.egit.ui.currentRepository">
+					<iterate
+							ifEmpty="false"
+							operator="and">
+						<and>
 							<not>
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isInitialized">
-								</test>
+								<adapt type="org.eclipse.jgit.lib.Repository">
+									<test
+											forcePluginActivation="true"
+											property="GitFlowRepository.isInitialized">
+									</test>
+								</adapt>
 							</not>
-						</with>
-					</and>
+						</and>
+					</iterate>
 				</visibleWhen>
 			</command>
 		</menuContribution>
@@ -43,12 +46,18 @@
 					label="%TeamGitFlowMenu.name">
 				<visibleWhen
 						checkEnabled="false">
-					<with variable="org.eclipse.egit.ui.currentRepository">
-						<test
-								forcePluginActivation="true"
-								property="GitFlowRepository.isInitialized">
-						</test>
-					</with>
+					<iterate
+							ifEmpty="false"
+							operator="and">
+						<and>
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isInitialized">
+								</test>
+							</adapt>
+						</and>
+					</iterate>
 				</visibleWhen>
 				<command
 						commandId="org.eclipse.egit.gitflow.ui.command.featureStart"
@@ -185,10 +194,30 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.InitHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
+			<enabledWhen>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<and>
+						<not>
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isInitialized">
+								</test>
+							</adapt>
+						</not>
+					</and>
+				</iterate>
+			</enabledWhen>
 		</handler>
 		<handler
 				commandId="org.eclipse.egit.gitflow.ui.command.featureStart">
@@ -196,17 +225,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureStartHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<with variable="org.eclipse.egit.ui.currentRepository">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isInitialized">
-					</test>
-				</with>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<and>
+						<adapt type="org.eclipse.jgit.lib.Repository">
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isInitialized">
+							</test>
+						</adapt>
+					</and>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -215,17 +254,28 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureFinishHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<with variable="org.eclipse.egit.ui.currentRepository">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isFeature">
-					</test>
-				</with>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+
+					<and>
+						<adapt type="org.eclipse.jgit.lib.Repository">
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isFeature">
+							</test>
+						</adapt>
+					</and>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -234,17 +284,30 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.ReleaseStartHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<instanceof
+								value="org.eclipse.jgit.revwalk.RevCommit">
+						</instanceof>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<with variable="org.eclipse.egit.ui.currentRepository">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isInitialized">
-					</test>
-				</with>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<and>
+						<adapt type="org.eclipse.jgit.lib.Repository">
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isInitialized">
+							</test>
+						</adapt>
+					</and>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -253,17 +316,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.ReleaseFinishHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<with variable="org.eclipse.egit.ui.currentRepository">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isRelease">
-					</test>
-				</with>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<and>
+						<adapt type="org.eclipse.jgit.lib.Repository">
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isRelease">
+							</test>
+						</adapt>
+					</and>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -273,23 +346,31 @@
 			</class>
 
 			<enabledWhen>
-				<with variable="org.eclipse.egit.ui.currentRepository">
-					<and>
-						<test
-								forcePluginActivation="true"
-								property="GitFlowRepository.isFeature">
-						</test>
-						<test
-								forcePluginActivation="true"
-								property="GitFlowRepository.hasDefaultRemote">
-						</test>
-					</and>
-				</with>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isFeature">
+							</test>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.hasDefaultRemote">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 		</handler>
 		<handler
@@ -299,21 +380,31 @@
 			</class>
 
 			<enabledWhen>
-				<with variable="org.eclipse.egit.ui.currentRepository">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isRelease">
-					</test>
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.hasDefaultRemote">
-					</test>
-				</with>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isRelease">
+							</test>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.hasDefaultRemote">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 		</handler>
 		<handler
@@ -323,21 +414,31 @@
 			</class>
 
 			<enabledWhen>
-				<with variable="org.eclipse.egit.ui.currentRepository">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isHotfix">
-					</test>
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.hasDefaultRemote">
-					</test>
-				</with>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isHotfix">
+							</test>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.hasDefaultRemote">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 		</handler>
 		<handler
@@ -346,17 +447,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureTrackHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<with variable="org.eclipse.egit.ui.currentRepository">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.hasDefaultRemote">
-					</test>
-				</with>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.hasDefaultRemote">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -365,17 +476,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureCheckoutHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<with variable="org.eclipse.egit.ui.currentRepository">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isInitialized">
-					</test>
-				</with>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<and>
+						<adapt type="org.eclipse.jgit.lib.Repository">
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isInitialized">
+							</test>
+						</adapt>
+					</and>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -384,17 +505,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.FeatureRebaseHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<with variable="org.eclipse.egit.ui.currentRepository">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isFeature">
-					</test>
-				</with>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isFeature">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -403,17 +534,27 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.HotfixStartHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<with variable="org.eclipse.egit.ui.currentRepository">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isInitialized">
-					</test>
-				</with>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isInitialized">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 		</handler>
 		<handler
@@ -422,24 +563,34 @@
 					class="org.eclipse.egit.gitflow.ui.internal.actions.HotfixFinishHandler">
 			</class>
 			<activeWhen>
-				<reference
-						definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
-				</reference>
+				<iterate>
+					<or>
+						<reference
+								definitionId="org.eclipse.egit.gitflow.ui.commandEnabled">
+						</reference>
+					</or>
+				</iterate>
 			</activeWhen>
 			<enabledWhen>
-				<with variable="org.eclipse.egit.ui.currentRepository">
-					<test
-							forcePluginActivation="true"
-							property="GitFlowRepository.isHotfix">
-					</test>
-				</with>
+				<iterate
+						ifEmpty="false"
+						operator="and">
+					<adapt type="org.eclipse.jgit.lib.Repository">
+						<and>
+							<test
+									forcePluginActivation="true"
+									property="GitFlowRepository.isHotfix">
+							</test>
+						</and>
+					</adapt>
+				</iterate>
 			</enabledWhen>
 		</handler>
 	</extension>
 	<extension
 			point="org.eclipse.core.expressions.propertyTesters">
 		<propertyTester
-				class="org.eclipse.egit.gitflow.ui.internal.properties.RepositoryPropertyTester"
+				class="org.eclipse.egit.gitflow.ui.internal.selection.SelectionPropertyTester"
 				id="org.eclipse.egit.gitflow.ui.propertyTester"
 				namespace="GitFlowRepository"
 				properties="isFeature,isRelease,isHotfix,isDevelop,isMaster,isInitialized,hasDefaultRemote"
@@ -452,26 +603,12 @@
 		<definition
 				id="org.eclipse.egit.gitflow.ui.commandEnabled">
 			<or>
-				<reference
-						definitionId="org.eclipse.egit.ui.resourcesSingleRepository">
-				</reference>
-				<and>
-					<count
-							value="1">
-					</count>
-					<iterate>
-						<and>
-							<instanceof
-									value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
-							</instanceof>
-							<not>
-								<test
-										property="GitRepository.isBare">
-								</test>
-							</not>
-						</and>
-					</iterate>
-				</and>
+				<instanceof
+						value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
+				</instanceof>
+				<instanceof
+						value="org.eclipse.core.resources.IResource">
+				</instanceof>
 			</or>
 		</definition>
 	</extension>
@@ -489,13 +626,7 @@
 			<adapter type="org.eclipse.jgit.lib.Repository"/>
 		</factory>
 	</extension>
-	<extension
-			point="org.eclipse.core.runtime.adapters">
-		<factory adaptableType="org.eclipse.jface.viewers.ISelection"
-				class="org.eclipse.egit.gitflow.ui.internal.factories.GitFlowAdapterFactory">
-			<adapter type="org.eclipse.jgit.lib.Repository"/>
-		</factory>
-	</extension>
+
 
 	<extension
 			point="org.eclipse.ui.menus">
@@ -506,15 +637,21 @@
 					label="%TeamGitFlowMenu.name">
 				<visibleWhen
 						checkEnabled="false">
-					<and>
-						<reference definitionId="org.eclipse.egit.ui.resourcesSingleRepository" />
-						<with variable="org.eclipse.egit.ui.currentRepository">
-							<test
-									forcePluginActivation="true"
-									property="GitFlowRepository.isInitialized">
-							</test>
-						</with>
-					</and>
+					<iterate
+							ifEmpty="false"
+							operator="and">
+						<and>
+							<instanceof
+									value="org.eclipse.core.resources.IProject">
+							</instanceof>
+							<adapt type="org.eclipse.jgit.lib.Repository">
+								<test
+										forcePluginActivation="true"
+										property="GitFlowRepository.isInitialized">
+								</test>
+							</adapt>
+						</and>
+					</iterate>
 				</visibleWhen>
 				<command
 						commandId="org.eclipse.egit.gitflow.ui.command.featureStart"
@@ -595,17 +732,23 @@
 					style="push">
 				<visibleWhen
 						checkEnabled="false">
-					<and>
-						<reference definitionId="org.eclipse.egit.ui.resourcesSingleRepository" />
-						<with variable="org.eclipse.egit.ui.currentRepository">
+					<iterate
+							ifEmpty="false"
+							operator="and">
+						<and>
+							<instanceof
+									value="org.eclipse.core.resources.IProject">
+							</instanceof>
 							<not>
-								<test
-										forcePluginActivation="true"
-										property="GitFlowRepository.isInitialized">
-								</test>
+								<adapt type="org.eclipse.jgit.lib.Repository">
+									<test
+											forcePluginActivation="true"
+											property="GitFlowRepository.isInitialized">
+									</test>
+								</adapt>
 							</not>
-						</with>
-					</and>
+						</and>
+					</iterate>
 				</visibleWhen>
 			</command>
 		</menuContribution>
